--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 <h3>E-Journal Website</h3>
                 <img src="Screenshot 2024-11-17 202105.png" alt="E-Journal Website">
                 <p>Membuat dan mengembangkan situs website penerbitan jurnal menggunakan sistem software OJS (Open Journal Sistem).</p>
-                <a href="#" class="btn">View Details</a>
+                <a href="https://ejournal.mahalisan.com/" class="btn">View Details</a>
             </div>
             <!-- Example 2 -->
             <div class="item">
                 <h3>Legal Consultant Website</h3>
                 <img src="Screenshot 2024-11-17 201856.png" alt="Legal Consultant Website">
                 <p>Membuat dan mengembangkan situs website penyedia layanan konsultasi hukum menggunakan software CMS WordPress.</p>
-                <a href="#" class="btn">View Details</a>
+                <a href="https://mahalisan.com/" class="btn">View Details</a>
             </div>
             <!-- Example 3 -->
             <div class="item">
@@ -58,7 +58,7 @@
                 <h3>Social Media Manager</h3>
                 <img src="Screenshot 2024-11-17 202510.png" alt="Social Media Manager">
                 <p>Bertanggung jawab mengelola media seperti instagram, youtube, dan tiktok di suatu kepengurusan himpunan mahasiswa teknik informatika</p>
-                <a href="#" class="btn">View Details</a>
+                <a href="https://www.instagram.com/himatifunper?igsh=MWVjMzA2bTMzZjZ3eQ==" class="btn">View Details</a>
             </div>
         </div>
     </section>
